# zqrpc

./: .gitignore  APIDOC.md  CMakeLists.txt  LICENSE  Makefile  README.md  a  activate_stderr.sh
cmake_modules/: FindGlog.cmake  FindZeroMQ.cmake  zqrpc_functions.cmake
examples/: CMakeLists.txt  EchoClient.cc  EchoEndpoint.hh  EchoServer.cc  echo.proto
include/: zmq.hpp  zqrpc.hpp
include/zqrpc/: RpcChannel.hh  RpcHeaders.hh  RpcMethod.hpp  RpcServer.hh  RpcWorker.hh  ServiceBase.hpp  SubServer.hh  ZController.hpp  ZError.hpp  ZSocket.hpp  ZSocket.hpp.1  ZmqUtils.hpp
plugin/: CMakeLists.txt  FileGenerator.cc  FileGenerator.hh  ServiceGenerator.cc  ServiceGenerator.hh  ZqrpcCppGenerator.cc  ZqrpcCppGenerator.hh  ZqrpcCppMain.cc
simple/: CMakeLists.txt  Client.cc  Common.hpp  Server.cc
src/: CMakeLists.txt  RpcChannel.cc  RpcServer.cc  RpcWorker.cc  ServiceBase.cc  zqrpc.proto
test/: CMakeLists.txt
